fix(ripple): removes line wrapping

--- a/css/ripple.css
+++ b/css/ripple.css
@@ -7,7 +7,6 @@
 html, body { 
     margin:0; 
     padding:0; 
-    /* overflow:hidden */
 }
 body {
     position: relative;
@@ -23,7 +22,6 @@ body {
 #ripple-text {
     position: fixed;
     color: antiquewhite;
-    word-break: break-all;
     font-family: 'OCR A Std', monospace;
     font-weight: bold;
     line-height: 10px;
